# austere-browser

./: .gitignore  IMPLEMENTATION.md  README.md  design-system.md  flags-norust.gn  flags.gn  helium-sample.txt
.github/workflows/: build-test.yml  build.yml  release.yml
build_src/: src
configs/: austere_flags.txt  policies.json
dev/: README.md  create-patch.sh  flags-dev.gn  flags-minimal.gn  hot-reload.sh  incremental-build.sh  quick-test-patch.sh  quick-test.sh  run-dev.sh  test-feature.sh  test-features.sh
dev/patches-temp/: series
dev/patches-temp/branding/: 001-product-name.patch
dev/patches-temp/core/: 010-strip-ui.patch  015-reduce-accept-language-headers.patch  017-reduce-system-info.patch  018-enable-component-updates.patch
dev/patches-temp/memory/: 002-process-limits.patch  003-v8-limits.patch  005-infinite-tab-freezing.patch  014-memory-aggressiveness-enum.patch
dev/patches-temp/performance/: 001-helium-aggressive-memory.patch  002-helium-network-optimizations.patch  003-helium-process-limits.patch  004-helium-v8-limits.patch
dev/patches-temp/privacy/: 001-enhanced-privacy.patch  003-audio-context-fingerprinting.patch
dev/patches-temp/ui/: 001-tab-memory-tooltip.patch  002-memory-settings-ui.patch  003-austere-tab-design.patch  003-disable-bookmarks-bar-default.patch  004-enable-tab-hover-cards.patch  005-enable-tab-search-toolbar-button.patch  006-mru-tab-cycling.patch  007-clean-context-menu.patch
dev/runtime/user-data/: Local State  SingletonCookie  SingletonLock  SingletonSocket
dev/runtime/user-data/Default/: DIPS-wal  History-journal  Preferences  Web Data
dev/runtime/user-data/Default/Code Cache/wasm/index-dir/: the-real-index
dev/runtime/user-data/Default/DawnGraphiteCache/: index
dev/runtime/user-data/Default/DawnWebGPUCache/: index
dev/runtime/user-data/Default/Extension Rules/: LOG
dev/runtime/user-data/Default/Extension Scripts/: LOG
dev/runtime/user-data/Default/Extension State/: LOG
dev/runtime/user-data/Default/GPUCache/: index
dev/runtime/user-data/Default/Local Storage/leveldb/: LOG
dev/runtime/user-data/Default/Session Storage/: LOG
dev/runtime/user-data/Default/Sessions/: Session_13414728106878094
dev/runtime/user-data/Default/Shared Dictionary/cache/index-dir/: the-real-index
dev/runtime/user-data/Default/Site Characteristics Database/: LOG
dev/runtime/user-data/Default/Sync Data/LevelDB/: LOG
dev/runtime/user-data/Default/shared_proto_db/: LOG
dev/runtime/user-data/Default/shared_proto_db/metadata/: LOG
dev/runtime/user-data/GrShaderCache/: data_0  data_1  index
dev/runtime/user-data/GraphiteDawnCache/: index
dev/runtime/user-data/ShaderCache/: data_0  data_1  data_2  index
dev/test-extension/: austere-styles.css  manifest.json  test-script.js
patches/: series
patches/core/: 009-strip-bloat.patch  011-strip-services.patch  016-add-low-power-framerate-flag.patch  018-enable-component-updates.patch
patches/memory/: 001-aggressive-tab-discard.patch  004-cache-preload.patch  006-memory-saving-by-default.patch  007-parallel-downloading.patch  008-max-connections-per-host.patch  014-memory-aggressiveness-enum.patch
patches/privacy/: 002-fingerprinting-mitigations.patch  002-force-privacy-dns.patch  003-audio-context-fingerprinting.patch  003-force-dns-resolver.patch
patches/ui/: 002-austere-browser-frame.patch  002-memory-settings-ui.patch  003-disable-bookmarks-bar-default.patch  004-austere-color-system.patch  004-enable-tab-hover-cards.patch  005-enable-tab-search-toolbar-button.patch  006-mru-tab-cycling.patch  007-clean-context-menu.patch
scripts/: create-appimage.sh  create-release.sh  get-version.sh  package.sh  test.sh
