is_official_build=true
is_debug=false
symbol_level=0
is_component_build=false
is_clang=true
use_lld=true
use_thin_lto=false
is_cfi=false
chrome_pgo_phase=0
treat_warnings_as_errors=false
clang_use_chrome_plugins=false
exclude_unwind_tables=true

use_sysroot=false
use_system_libffi=true
clang_base_path="/home/robot/clang_compat"
clang_version="21"
rust_sysroot_absolute="/home/robot/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu"
rust_bindgen_root="/home/robot/.cargo"
rustc_version="1.94.0-nightly"

google_api_key=""
google_default_client_id=""
google_default_client_secret=""
use_official_google_api_keys=false

safe_browsing_mode=0
enable_reporting=false
disable_fieldtrial_testing_config=true

enable_hangout_services_extension=false
enable_remoting=false
enable_mdns=false
enable_service_discovery=false

enable_widevine=false
build_with_tflite_lib=false

proprietary_codecs=true
ffmpeg_branding="Chrome"

use_vaapi=true
use_pulseaudio=true
use_alsa=true

use_ozone=true
ozone_platform_wayland=true
ozone_platform_x11=true
ozone_platform="x11"

rtc_use_pipewire=true
